<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/indentation_6"
        tools:context=".presentation.activities.detail.ProductDetailActivity">


    <ImageView
            android:id="@+id/ivProductDetailPreview"
            android:layout_width="match_parent"
            android:layout_height="220dp"/>

    <TextView
            android:id="@+id/txtProductDetailName"
            android:layout_width="match_parent"
            android:paddingHorizontal="@dimen/indentation_6"
            android:layout_marginTop="@dimen/indentation_6"
            android:textSize="@dimen/txt_size_20"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/txtProductDetailPrice"
            android:layout_width="match_parent"
            android:paddingHorizontal="@dimen/indentation_6"
            android:layout_marginTop="@dimen/indentation_6"
            android:textSize="@dimen/txt_size_14"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/txtProductDetailCount"
            android:layout_width="match_parent"
            android:paddingHorizontal="@dimen/indentation_6"
            android:layout_marginTop="@dimen/indentation_6"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/txtProductDetailDescription"
            android:layout_width="match_parent"
            android:paddingHorizontal="@dimen/indentation_6"
            android:layout_marginTop="@dimen/indentation_6"
            android:layout_height="wrap_content"/>

    <Button
            android:layout_marginTop="@dimen/indentation_6"
            android:id="@+id/btnChangeProduct"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/txt_size_14"
            android:text="@string/btn_text_change"/>

    <Button
            android:layout_marginTop="@dimen/indentation_6"
            android:id="@+id/btnChangeStats"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_size_14"
            android:textColor="@color/colorWhite"
            android:text="@string/btn_change_stats"/>

    <Button
            android:layout_marginTop="@dimen/indentation_6"
            android:id="@+id/btnDeleteProduct"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_size_14"
            android:textColor="@color/colorWhite"
            android:text="@string/btn_delete_text"/>


</LinearLayout>
</ScrollView>